--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		
 		<div class="row"><!--Menu Bar-->
 			<nav>
-				<li class="current"><a href="#">Home<a/></li>
-				<li><a href="#">List<a/></li>
-				<li><a href="#">Genre<a/></li>
+				<li class="current"><a href="index.html">Home<a/></li>
+				<li><a href="list_index.html">List<a/></li>
+				<li><a href="genre_index.html">Genre<a/></li>
 				<li><a href="#">About Us<a/></li>
 				<li><a href="#">FAQ<a/></li>
 			</nav>
