--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+		
 	<div class="container">
 		<div class="row"><!--Title Bar-->
 		
@@ -22,8 +23,8 @@
 				<li class="current"><a href="index.html">Home<a/></li>
 				<li><a href="list_index.html">List<a/></li>
 				<li><a href="genre_index.html">Genre<a/></li>
-				<li><a href="#">About Us<a/></li>
-				<li><a href="#">FAQ<a/></li>
+				<li><a href="aboutus.html">About Us<a/></li>
+				<li><a href="faq.html">FAQ<a/></li>
 			</nav>
 		</div><!--Akhir Menu Bar-->	
 		
@@ -34,8 +35,9 @@
 				<div class="nine">
 				<div class="row">
 					<div class="film1"> <!--Film 1-->				
+						<a href="assasins.html">
 						<div class="four">
-						</div>
+						</div></a>
 						<div class="seven">
 							<h1><b>Assassin&apos;s Creed</b></h1>
 							<p> <br>
@@ -50,8 +52,9 @@
 				</div>
 					<div class="row">
 					<div class="film2"> <!--Film 2-->				
+						<a href="monstercalls.html">
 						<div class="four">
-						</div>
+						</div><a/>
 						<div class="seven">
 							<h1><b>A Monster Calls </b></h1>
 							<p> <br>
@@ -67,8 +70,9 @@
 					
 					<div class="row">
 					<div class="film3"> <!--Film 2-->				
+						<a href="cars3.html">
 						<div class="four">
-						</div>
+						</div><a/>
 						<div class="seven">
 							<h1><b>Cars 3</b></h1>
 							<p> <br>
@@ -91,31 +95,36 @@
 					<!--Right Content-->
 					<div class="row"><!--Foto di bagian Kanan-->
 						<div class="right1">
+							<a href="assasins.html">
 							<div class="eleven">
-							</div>
+							</div><a/>
 						</div>
 					<div class="row"><!--Foto di bagian Kanan-->
 						<div class="right2">
+							<a href="fast8.html">
 							<div class="eleven">
-							</div>
+							</div><a/>
 						</div>
 					</div>
 					<div class="row"><!--Foto di bagian Kanan-->
 						<div class="right3">
+							<a href="monstercalls.html">
 							<div class="eleven">
-							</div>
+							</div><a/>
 						</div>
 					</div>
 					<div class="row"><!--Foto di bagian Kanan-->
 						<div class="right4">
+							<a href="sing.html">
 							<div class="eleven">
-							</div>
+							</div><a/>
 						</div>
 					</div>
 					<div class="row"><!--Foto di bagian Kanan-->
 						<div class="right5">
+							<a href="underworld.html">
 							<div class="eleven">
-							</div>
+							</div><a/>
 						</div>
 					</div>
 					
@@ -128,10 +137,11 @@
 		
 		<div class="row">
 		<footer>
-		<h2>Created by Kelompok 5</h2>
+		<h2>Created by : (Kelompok 5) IMK kelas K</h2>
 		</footer>
 		</div><!--Footer-->
 		
 	 </div>
+	 <audio src="alone.mp3" type="audio/mp3" autoplay loop></audio>
 </body>
 </html>
