--- a/genre_index.html
+++ b/genre_index.html
@@ -22,8 +22,8 @@
 				<li><a href="index.html">Home<a/></li>
 				<li><a href="list_index.html">List<a/></li>
 				<li class="current"><a href="genre_index.html">Genre<a/></li>
-				<li><a href="#">About Us<a/></li>
-				<li><a href="#">FAQ<a/></li>
+				<li><a href="aboutus.html">About Us<a/></li>
+				<li><a href="faq.html">FAQ<a/></li>
 			</nav>
 		</div><!--Akhir Menu Bar-->	
 		
@@ -43,43 +43,43 @@
 							<div class="ten">
 								<h1><b>Action</b></h1>
 								<li><a href="assasins.html">Assassin&apos;s Creed<a/></li>
-								<li><a href="#">Fast and Furious 8<a/></li>
-								<li><a href="#">Mechanic : Resurrection<a/></li>
-								<li><a href="#">Rogue One : Star Wars Story<a/></li>
-								<li><a href="#">The Magnificent Seven<a/></li>
-								<li><a href="#">Underworld : Blood Wars<a/></li>
+								<li><a href="fast8.html">Fast and Furious 8<a/></li>
+								<li><a href="mechanic.html">Mechanic : Resurrection<a/></li>
+								<li><a href="rogueone.html">Rogue One : Star Wars Story<a/></li>
+								<li><a href="magnificent7.html">The Magnificent Seven<a/></li>
+								<li><a href="underworld.html">Underworld : Blood Wars<a/></li>
 								<h1><b>Adventure</b></h1>
 								<li><a href="assasins.html">Assassin&apos;s Creed<a/></li>
-								<li><a href="#">Fantastic Beast<a/></li>
-								<li><a href="#">Rogue One : Star Wars Story<a/></li>
-								<li><a href="#">The Magnificent Seven<a/></li>
+								<li><a href="fantasticbeast.html">Fantastic Beast<a/></li>
+								<li><a href="rogueone.html">Rogue One : Star Wars Story<a/></li>
+								<li><a href="magnificent7.html">The Magnificent Seven<a/></li>
 								<h1><b>Animation</b></h1>
-								<li><a href="#">Cars 3<a/></li>
-								<li><a href="#">Moana<a/></li>
-								<li><a href="#">Sing<a/></li>
+								<li><a href="cars3.html">Cars 3<a/></li>
+								<li><a href="moana.html">Moana<a/></li>
+								<li><a href="sing.html">Sing<a/></li>
 								<h1><b>Drama</b></h1>
-								<li><a href="#">A Monster Calls<a/></li>
-								<li><a href="#">Hacksaw Ridge<a/></li>
-								<li><a href="#">Sing<a/></li>
+								<li><a href="monstercalls.html">A Monster Calls<a/></li>
+								<li><a href="hacksawridge.html">Hacksaw Ridge<a/></li>
+								<li><a href="sing.html">Sing<a/></li>
 								<h1><b>Comedy</b></h1>
-								<li><a href="#">Cars 3<a/></li>
-								<li><a href="#">Moana<a/></li>
-								<li><a href="#">Sing<a/></li>
+								<li><a href="cars3.html">Cars 3<a/></li>
+								<li><a href="moana.html">Moana<a/></li>
+								<li><a href="sing.html">Sing<a/></li>
 								<h1><b>Fantasy</b></h1>
 								<li><a href="assasins.html">Assassin&apos;s Creed<a/></li>
-								<li><a href="#">A Monster Calls<a/></li>
-								<li><a href="#">Fantastic Beast<a/></li>
+								<li><a href="monstercalls.html">A Monster Calls<a/></li>
+								<li><a href="fantasticbeast.html">Fantastic Beast<a/></li>
 								<h1><b>Family</b></h1>
-								<li><a href="#">Cars 3<a/></li>
-								<li><a href="#">Fantastic Beast<a/></li>
-								<li><a href="#">Sing<a/></li>
+								<li><a href="cars3.html">Cars 3<a/></li>
+								<li><a href="fantasticbeast.html">Fantastic Beast<a/></li>
+								<li><a href="sing.html">Sing<a/></li>
 								<h1><b>History</b></h1>
-								<li><a href="#">Hacksaw Ridge<a/></li>
+								<li><a href="hacksawridge.html">Hacksaw Ridge<a/></li>
 								<h1><b>Horror</b></h1>
-								<li><a href="#">Underworld : Blood Wars<a/></li>
+								<li><a href="underworld.html">Underworld : Blood Wars<a/></li>
 								<h1><b>Thriller</b></h1>
-								<li><a href="#">Fast and Furious 8<a/></li>
-								<li><a href="#">Mechanic : Resurrection<a/></li>
+								<li><a href="fast8.html">Fast and Furious 8<a/></li>
+								<li><a href="mechanic.html">Mechanic : Resurrection<a/></li>
 							</div>
 						</div>
 					</div>
@@ -93,10 +93,11 @@
 		
 		<div class="row"><!--Footer-->
 			<footer>
-			<h2>Created by Kelompok 5</h2>
+			<h2>Created by : (Kelompok 5) IMK kelas K</h2>
 			</footer>
 		</div><!--Footer-->
 		
 	 </div>
+	 <audio src="alone.mp3" type="audio/mp3" autoplay loop></audio>
 </body>
 </html>
